--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -49,7 +49,7 @@
             <fieldset>
                 <div class="form-group">
                     <label for="username">Username</label>
-                    <input type="text" class="form-control" id="username" placeholder="Username" name="username" size="10" maxlength="10">
+                    <input type="text" class="form-control" id="username" placeholder="Username" name="username" size="10" maxlength="10" value=<%= name %> readonly="">
                 </div>
                 <div class="form-group">
                     <label for="email">Email address</label>
