--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -46,9 +46,9 @@
         <table class="table table-hover">
             <tbody>
                 <tr>
-                    <td><button><a href="/">Search</a></button></td>
-                    <td><button><a href="/history">History</a></button></td>
-                    <td><button><a href="/recommendation">Recommendation</a></button></td>
+                    <td><a class="btn btn-primary btn-lg" href="/" role="button">Search</a></td>
+                    <td><a class="btn btn-primary btn-lg" href="/history" role="button">History</a></td>
+                    <td><a class="btn btn-primary btn-lg" href="/recommendation" role="button">Recommendation</a></td>
                 </tr>
             </tbody>
         </table>
