--- a/views/history.ejs
+++ b/views/history.ejs
@@ -43,22 +43,21 @@
           </nav>
 
         <div style="padding: 5%;">
-            <% if(hospitals.length == 0){   %>
-                <h2>You haven't visited any hospital.</h2>
-            <% }else{  for(let a=0; a<hospitals.length; a++) { %>
-                <ul class="list-group">
-                    <%for(var i=0; i < hospitals.length;i++){ %>
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                        <h3>
-                            <%= hospitals[i].hospital._fields[0].properties.Hospital_Name %>
-                        </h3>    
-                        <p>
-                            <%= hospitals[i].hospital._fields[0].properties.Hospital_Name %>
-                        </p>
-                        </li>
-                    <% } %>
-                </ul>
-            <% } } %>
+            
+              <ul class="list-group">
+                <% for(let a=0; a<hospitals.length; a++) { %>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                        <form action="/add" method="POST">
+                            <div class="form-group row">
+                                <div class="col-sm-10">
+                                  <input type="text" readonly="" class="form-control-plaintext" id="hospital" name="hospital" value= <%= hospitals[a].hospital %> >
+                                </div>
+                              </div>
+                              <button type="submit" class="btn btn-primary">Visited</button>
+                        </form>
+                    </li>
+                <% } %>
+            </ul>
         </div>
     </body>
 
