--- a/views/search.ejs
+++ b/views/search.ejs
@@ -34,14 +34,7 @@
         <ul class="list-group">
             <%for(var i=0; i < names.length;i++){ %>
                 <li class="list-group-item d-flex justify-content-between align-items-center">
-                    <form action="/add" method="POST">
-                        <div class="form-group row">
-                            <div class="col-sm-10">
-                              <input type="text" readonly="" class="form-control-plaintext" id="hospital" name="hospital" value= <%= names[i].name %> >
-                            </div>
-                          </div>
-                          <button type="submit" class="btn btn-primary">Visited</button>
-                    </form>
+                    <%= names[i].name; %>
                 </li>
             <% } %>
         </ul>
