third commit with redirects

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -49,6 +49,8 @@
                     <td><a class="btn btn-primary btn-lg" href="/" role="button">Search</a></td>
                     <td><a class="btn btn-primary btn-lg" href="/history" role="button">History</a></td>
                     <td><a class="btn btn-primary btn-lg" href="/recommendation" role="button">Recommendation</a></td>
+                    <td><a class="btn btn-primary btn-lg" href="/map" role="button">Map</a></td>
+                    <td><a class="btn btn-primary btn-lg" href="/addHospital" role="button">Add Hospital</a></td>
                 </tr>
             </tbody>
         </table>
