fourth commit with minor changes

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -51,6 +51,8 @@
                     <td><a class="btn btn-primary btn-lg" href="/recommendation" role="button">Recommendation</a></td>
                     <td><a class="btn btn-primary btn-lg" href="/map" role="button">Map</a></td>
                     <td><a class="btn btn-primary btn-lg" href="/addHospital" role="button">Add Hospital</a></td>
+                    <td><a class="btn btn-primary btn-lg" href="/datacapture" role="button">Data Capture</a></td>
+
                 </tr>
             </tbody>
         </table>
