--- a/views/form.ejs
+++ b/views/form.ejs
@@ -58,16 +58,16 @@
       <div style="padding: 5%;">
         <div class="card border-primary mb-3 mx-auto" style="max-width: 20rem;">
             <div class="card-body">
-                <form action="/add1" method="post">
+                <form action="/datacapture" method="post">
                     <fieldset>
                         <div class="form-group">
-                            <label for="inputName">Name</label>
-                            <input type="text" class="form-control" id="inputName" placeholder="name" name="inputName" size="10" maxlength="10">
+                            <label for="username">Name</label>
+                            <input type="text" class="form-control" id="userame" placeholder="username" name="username" size="10" maxlength="10" readonly="" value="<%= name %>">
                         </div>
                         <div class="form-group">
-                            <label for="inputSurname">Surname</label>
-                            <input type="text" class="form-control" id="inputSurname" placeholder="surname" name="inputSurname" size="10" maxlength="10">
-                        </div>
+                          <label for="address">Address</label>
+                          <input type="text" class="form-control" id="address" placeholder="address" name="address" size="10" maxlength="50">
+                      </div>
                         <div class="form-group">
                             <label for="mylatitude">My Latitude</label>
                             <input type="text" class="form-control" id="mylatitude" placeholder="" name="mylatitude" size="10" maxlength="10">
@@ -96,6 +96,5 @@
             console.log("Geolocation is not available");
         }
     </script>
-    <script src="form.js"></script>
 </body>
 </html>
